fixed issue regarding box overflow

--- a/www/assets/css/home.scss
+++ b/www/assets/css/home.scss
@@ -45,11 +45,12 @@ $searchbox-height: 50px;
     margin-top: $desktop-header-height;
 
     @include media-breakpoint-down(md) {
-      margin-top: 0;
+      margin-top: 0 !important;
     }
 
     @include media-breakpoint-down(lg) {
       flex-direction: column;
+      margin-top: 85px;
     }
 
     .first-column {
